# human-ai-interaction

./: .gitignore  README.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  README.md  auth.db  auth.db.backup  create_learner.py  fix_user_solved_tasks.py  fix_user_xp.py  main.py  pyproject.toml
apps/api/app/: __init__.py  auth.py  config.py  db.py  dependencies.py  models.py  schema.py
apps/api/app/api/: achievements.py  auth.py  class_exercises.py  classes.py  deps.py  discussions.py  guest.py  learning_tips.py  math_helper.py  math_word_problems.py  notifications.py  progress.py  router.py  student_own_exercises.py  users.py
apps/api/app/api/schemas/: auth.py  class_exercises.py  classes.py  (+8 more)
apps/api/app/middleware/: __init__.py  session.py
apps/api/app/models/: __init__.py  achievement.py  base.py  class_exercise.py  classroom.py  discussion.py  learning.py  learning_tip.py  math.py  own_exercise_progress.py  progress.py  session.py  statistics.py  student_own_exercise.py  user.py
apps/api/app/services/: __init__.py  achievement_definitions.py  achievements.py  class_exercise.py  class_store.py  discussion.py  learning.py  math_progress.py  math_seed.py  math_seed_data.py  math_word_problems.py  openai_math_helper.py  security.py  sessions.py  streak.py  student_own_exercise.py  user_store.py
apps/api/tests/: conftest.py  test_auth_flow.py  test_auth_parity.py  test_classes.py  test_guest_and_sessions.py  test_math_word_problems.py  test_progress.py  test_security_helpers.py  test_user_creation.py
(+149 files in other folders)
